# ocs2_robotic_assets

./: CMakeLists.txt  package.xml
