<?xml version="2.0"?>
<package>

  <name>ocs2_robotic_assets</name>
  <version>10.3.0</version>
  <description>This package contains all the URDF files need for the robotic examples.</description>
  
  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
